Added session tacker for dynamic source links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,5 +21,9 @@
     <% end %>
 
     <%= yield %>
+    
+    <% if session[:source] %>
+      Thanks for visiting me from <%= session[:source] %>
+    <% end %>
   </body>
 </html>
