--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -23,8 +23,8 @@
 
     <%= yield %>
 
-    <%= render "shared/nav" %>
-    
+    <%= render "shared/nav", location: 'bottom' %>
+
     <% if session[:source] %>
       Thanks for visiting me from <%= session[:source] %>
     <% end %>
