Implemented content_tag helper methods

--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -19,8 +19,7 @@
 
     <%= yield %>
     
-    <% if session[:source] %>
-      Thanks for visiting me from <%= session[:source] %>
-    <% end %>
+    <%= source_helper("portfolio") %>
+
   </body>
 </html>
