--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,8 @@
     <%= login_helper%>
 
     <%= yield %>
-    
-    <% if session[:source] %>
-      Thanks for visiting me from <%= session[:source] %>
-    <% end %>
+
+    <%= source_helper("application") %>    
+
   </body>
 </html>
