Integrated helper methods from Actionview

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,7 @@
 <h1>Pages#contact</h1>
 <p>Find me in app/views/pages/contact.html.erb</p>
+
+<p><%= number_to_phone "8182555458" %></p>
+<p><%= number_to_currency "765" %></p>
+<p><%= number_to_percentage "27.85" %></p>
+<p><%= number_with_delimiter "1457895326" %></p>
